--- a/pipeline/ui/qt/browser_window.ui
+++ b/pipeline/ui/qt/browser_window.ui
@@ -22,75 +22,78 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_7">
     <item>
-     <widget class="QTabWidget" name="tabWidget">
+     <widget class="QTabWidget" name="choose">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="asset">
        <attribute name="title">
-        <string>Tab 1</string>
+        <string>Assets</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
+           <widget class="QComboBox" name="movies"/>
+          </item>
+          <item>
            <layout class="QHBoxLayout" name="horizontalLayout_6">
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_3">
               <item>
-               <widget class="QLabel" name="label">
+               <widget class="QLabel" name="category">
                 <property name="text">
                  <string>Category</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QListWidget" name="listWidget"/>
+               <widget class="QListWidget" name="listCat"/>
               </item>
              </layout>
             </item>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_4">
               <item>
-               <widget class="QLabel" name="label_2">
+               <widget class="QLabel" name="name">
                 <property name="text">
                  <string>Name</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QListWidget" name="listWidget_2"/>
+               <widget class="QListWidget" name="listName"/>
               </item>
              </layout>
             </item>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_5">
               <item>
-               <widget class="QLabel" name="label_3">
+               <widget class="QLabel" name="task">
                 <property name="text">
                  <string>Task</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QListWidget" name="listWidget_3"/>
+               <widget class="QListWidget" name="listTask"/>
               </item>
              </layout>
             </item>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_6">
               <item>
-               <widget class="QListWidget" name="listWidget_4"/>
+               <widget class="QListWidget" name="listVers"/>
               </item>
               <item>
-               <widget class="QCheckBox" name="checkBox">
+               <widget class="QCheckBox" name="wip">
                 <property name="text">
                  <string>WIP</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QCheckBox" name="checkBox_2">
+               <widget class="QCheckBox" name="publish">
                 <property name="text">
                  <string>Publish</string>
                 </property>
@@ -103,21 +106,21 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_7">
             <item>
-             <widget class="QPushButton" name="pushButton_4">
+             <widget class="QPushButton" name="open">
               <property name="text">
                <string>Open</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_6">
+             <widget class="QPushButton" name="reference">
               <property name="text">
                <string>Reference</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_5">
+             <widget class="QPushButton" name="build">
               <property name="text">
                <string>Build</string>
               </property>
@@ -129,9 +132,9 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="tab_2">
+      <widget class="QWidget" name="shot">
        <attribute name="title">
-        <string>Tab 2</string>
+        <string>Shots</string>
        </attribute>
       </widget>
      </widget>
